--- a/src/main/resources/upb/isc/colorpickerclient/home-view.fxml
+++ b/src/main/resources/upb/isc/colorpickerclient/home-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="upb.isc.clientsocketui2.HomeViewController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="upb.isc.colorpickerclient.HomeViewController">
    <children>
       <Button fx:id="btnConnect" layoutX="270.0" layoutY="307.0" mnemonicParsing="false" onAction="#onClickConnect" text="Connect" />
       <TextField fx:id="serverIPTF" layoutX="226.0" layoutY="139.0" />
